TuitionPaymentPan validation fixes

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -70,12 +70,12 @@ label.AcademicTariff.applyUnitsAmount=Aplicar valor para unidades adicionais
 label.AcademicTariff.unitAmount=Montante da unidade adicional
 label.AcademicTariff.applyPagesAmount=Aplicar valor para páginas
 label.AcademicTariff.pageAmount=Montante por página
-label.AcademicTariff.applyMaximumAmount=Aplicar valor máximo
-label.AcademicTariff.maximumAmount=Valor máximo
+label.AcademicTariff.applyMaximumAmount=Aplicar montante máximo
+label.AcademicTariff.maximumAmount=Montante máximo
 label.AcademicTariff.applyUrgencyRate=Aplicar taxa de urgência
-label.AcademicTariff.urgencyRate=Taxa de urgência (%)
+label.AcademicTariff.urgencyRate=Taxa de urgência
 label.AcademicTariff.applyLanguageTranslationRate=Aplicar taxa por tradução
-label.AcademicTariff.languageTranslationRate=Taxa por tradução (%)
+label.AcademicTariff.languageTranslationRate=Taxa por tradução
 label.AcademicTariff.dueDateCalculationType=Data de vencimento
 label.AcademicTariff.fixedDueDate=Data Fixa
 label.AcademicTariff.numberOfDaysAfterCreationForDueDate=Nº dias
@@ -189,7 +189,7 @@ error.TuitionPaymentPlanGroup.defaultGroupForExtracurricular.required=É necessár
 
 label.TuitionPaymentPlan.paymentPlanName=Propina para {0} ({1})
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para {0} ({1}) [{2}]
-label.TuitionPaymentPlan.delete.plan=Remover plano
+label.TuitionPaymentPlan.delete.plan=Remover
 label.TuitionPaymentPlan.executionYear=Ano Lectivo
 label.TuitionPaymentPlan.degreeType=Tipo de Curso
 label.TuitionPaymentPlan.degreeCurricularPlans=Planos Curriculares
@@ -213,12 +213,13 @@ label.TuitionPaymentPlan.curricularSemester.description={0}º semestre curricular
 label.TuitionPaymentPlan.deletion.success=O plano de propinas foi removido com sucesso.
 label.TuitionPaymentPlan.order.up.success=O plano foi ordenado com sucesso.
 label.TuitionPaymentPlan.order.down.success=O plano foi ordenado com sucesso.
-label.TuitionPaymentPlan.order.up=Ordenar para cima
-label.TuitionPaymentPlan.order.down=Ordenar para baixo
+label.TuitionPaymentPlan.order.up=Subir 1 nível
+label.TuitionPaymentPlan.order.down=Descer 1 nível
 label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados planos de propinas para este plano curricular
 label.TuitionPaymentPlan.standalone.debit.entry.name=Propina em Unidade Curricular Isolada: {0} - {1} ({2} ECTS)
 label.TuitionPaymentPlan.extracurricular.debit.entry.name=Propina em Unidade Extracurricular: {0} - {1} ({2} ECTS)
-label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos em caso de dívida
+label.TuitionPaymentPlan.academicalActBlockingOff=Não bloqueia actos académicos
+label.TuitionPaymentPlan.academicalActBlockingOn=Bloqueia actos académicos
 label.TuitionPaymentPlan.standalone=Curriculares isoladas
 label.TuitionPaymentPlan.extracurricular=Extracurriculares
 
@@ -283,7 +284,7 @@ label.TuitionInstallmentTariff.fixedDueDate=Data fixa para vencimento
 label.TuitionInstallmentTariff.applyInterests=Aplicar Juros
 label.TuitionInstallmentTariff.interestType=Cálculo do juro
 label.TuitionInstallmentTariff.numberOfDaysAfterDueDate=Dias após vencimento
-label.TuitionInstallmentTariff.rate=Taxa (%)
+label.TuitionInstallmentTariff.rate=Taxa
 label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
 label.TuitionInstallmentTariff.amount=Montante
 label.TuitionInstallmentTariff.product=Produto
@@ -454,7 +455,7 @@ label.title.manageacademicdebtgenerationrule=Lançamento automático de dívidas
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule=Lançamento automático de dívidas
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmDelete=Deseja remover esta regra?
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
-label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Produtos
+label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
 label.manageacademicdebtgenerationrule.createAcademicDebtGenerationRule=Criar regra para lançamento automático de dívidas
@@ -463,7 +464,7 @@ label.AcademicDebtGenerationRule.aggregateAllOrNothing=Apenas agregar todos os p
 label.AcademicDebtGenerationRule.closeDebitNote=Fechar nota de dívida
 label.AcademicDebtGenerationRule.createPaymentReferenceCode=Atribuir Ref. MB
 label.AcademicDebtGenerationRule.associated.products=Produtos associados
-label.AcademicDebtGenerationRuleEntry.product=Produto
+label.AcademicDebtGenerationRuleEntry.product=Item de dívida
 label.AcademicDebtGenerationRuleEntry.createDebt=Criar dívida
 label.AcademicDebtGenerationRule.rules=Regras
 
@@ -507,7 +508,7 @@ label.title.manageFinantialEntityAdministrativeOffice=Gerir Entidades Financeira
 label.manageFinantialEntityAdministrativeOffice.searchFinantialEntity=Gerir Entidades Financeiras e Secretarias Académicas
 label.FinantialEntity.name=Entidade Financeira
 label.FinantialEntity.administrativeOffice=Secretaria Académica
-label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Scretaria Académica / Entidade Financeira
+label.manageFinantialEntityAdministrativeOffice.readFinantialEntity=Detalhes da Secretaria Académica / Entidade Financeira
 label.manageFinantialEntityAdministrativeOffice.readFinantialEntity.confirmDelete=Delete confirmation
 label.manageFinantialEntityAdministrativeOffice.updateFinantialEntity=Actualizar Entidade Financeira
 
