Schools bootstrap scripts Fix emolument tariff price for additional units Fix service request event designation without execution year

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -110,7 +110,7 @@ label.AcademicTariff.delete.success=A tarifa foi removida com sucesso.
 
 label.AcademicTariff.period=Período
 label.AcademicTariff.amount=Montante
-label.AcademicTariff.unitsForBase.view.singular={0} Unidade
+label.AcademicTariff.unitsForBase.view.singular={0} Unidades
 label.AcademicTariff.unitsForBase.view={0} Unidade
 label.AcademicTariff.interests=Juro
 label.AcademicTariff.interests.not.applied.message=Não são aplicados juros
