Log for academic debt generation Fix tariff creation pages

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -248,8 +248,8 @@ error.TuitionPaymentPlan.fixedAmount.required= O montante da prestação de propin
 error.TuitionPaymentPlan.ectsCalculationType.required=A forma de cálculo do montante ECTS ou disciplina é obrigatória.
 error.TuitionPaymentPlan.factor.required=O factor é obrigatório.
 error.TuitionPaymentPlan.totalEctsOrUnits.required=O total de ECTS ou disciplinas por ano é obrigatório.
+error.TuitionPaymentPlan.installment.already.with.product=O produto associado a prestação já está inserido. 
 
- 
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -456,6 +456,7 @@ label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule=Lançamen
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmDelete=Deseja remover esta regra?
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
+label.AcademicDebtGenerationRule.paymentCodePool=Pool Referências MB
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
 label.manageacademicdebtgenerationrule.createAcademicDebtGenerationRule=Criar regra para lançamento automático de dívidas
