Fix bugs. Improve academic debt generation rule Update schools bootstrap

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -42,6 +42,7 @@ label.finish=Finalizar
 label.annul=Anular
 label.revert=Reverter
 label.annuled=Anulado
+label.confirm=Confirmar
 
 error.TuitionPaymentPlanGroup.code.required= O código de Tipo de Propina é de preenchimento obrigatório
 error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de preenchimento obrigatório
