Created AcademicDebtGenerationLog screen

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -454,6 +454,7 @@ label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
 
 label.title.manageacademicdebtgenerationrule=Lançamento automático de dívidas
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule=Lançamento automático de dívidas
+label.manageacademicdebtgenerationrule.readlog=Ver Histórico
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmDelete=Deseja remover esta regra?
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
@@ -469,6 +470,7 @@ label.AcademicDebtGenerationRule.associated.products=Produtos associados
 label.AcademicDebtGenerationRuleEntry.product=Item de dívida
 label.AcademicDebtGenerationRuleEntry.createDebt=Criar dívida
 label.AcademicDebtGenerationRule.rules=Regras
+label.log.date=Data de Criação: 
 
 error.AcademicDebtGenerationRule.executionYear.required=O ano lectivo é obrigatório.
 error.AcademicDebtGenerationRule.closeDebitNote.requires.aggregateOnDebitNote=O fecho da nota de dívida requer a agregação em nota de dívida.
