--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -49,6 +49,7 @@ error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de pree
 error.TuitionPaymentPlanGroup.for.standalone.already.exists= Tipo de Propina já existe
 error.TuitionPaymentPlanGroup.delete.impossible= Não é possível apagar o Tipo de Propina
 label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=Não existem planos curriculares para seleccionar
+label.TuitionPaymentPlan.confirmDelete= Deseja remover o Plano Curricular seleccionado?
 label.createinsertinstallments.confirmDelete=Deseja remover a prestação?
 
 #---------------------------
@@ -455,6 +456,7 @@ label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
 label.title.manageacademicdebtgenerationrule=Lançamento automático de dívidas
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule=Lançamento automático de dívidas
 label.manageacademicdebtgenerationrule.readlog=Ver Histórico
+label.manageacademicdebtgenerationrulelog.expandcolapse=Expandir / Contrair
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmDelete=Deseja remover esta regra?
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
