Allow forcing tuition creation when the student is not enrolled RegistrationProtocol payGratuities edition interface update SchoolsBootstrap Generate debit note standalone and extracurriculars enrolments

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -568,3 +568,14 @@ error.AcademicServiceRequestDebtCreation.tariff.not.found=Não foi encontrado um 
 error.AcademicServiceRequestDebtCreation.event.is.charged=A dívida já está lançada.
 
 label.AcademicActBlockingSuspensionController.link=Suspensão de bloqueios de actos académicos
+
+
+#RegistrationProtocol
+
+label.title.manageRegistrationProtocolPayGratuities=Configurar de Propinas em Acordos
+label.manageRegistrationProtocolPayGratuities.searchRegistrationProtocol=Acordo
+label.RegistrationProtocol.payGratuity=Pagamento de propinas
+label.RegistrationProtocol.description=Descrição
+label.manageRegistrationProtocolPayGratuities.readRegistrationProtocol=Detalhes do Acordo
+label.manageRegistrationProtocolPayGratuities.updateRegistrationProtocol=Actualizar Acordo
+
