--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -51,6 +51,7 @@ error.TuitionPaymentPlanGroup.delete.impossible= Não é possível apagar o Tipo de
 label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=Não existem planos curriculares para seleccionar
 label.TuitionPaymentPlan.confirmDelete= Deseja remover o Plano Curricular seleccionado?
 label.createinsertinstallments.confirmDelete=Deseja remover a prestação?
+label.TuitionPaymentPlan.details=Detalhes
 
 #---------------------------
 #END OF GENERIC RESOURCES
