--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -49,7 +49,7 @@ error.TuitionPaymentPlanGroup.name.required= O nome de Tipo de Propina é de pree
 error.TuitionPaymentPlanGroup.for.standalone.already.exists= Tipo de Propina já existe
 error.TuitionPaymentPlanGroup.delete.impossible= Não é possível apagar o Tipo de Propina
 label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=Não existem planos curriculares para seleccionar
-label.TuitionPaymentPlan.confirmDelete= Deseja remover o Plano Curricular seleccionado?
+label.TuitionPaymentPlan.confirmDelete= Deseja remover o Plano de Propinas do Curso seleccionado?
 label.createinsertinstallments.confirmDelete=Deseja remover a prestação?
 label.TuitionPaymentPlan.details=Detalhes
 
