Improve academix tax debt creation Avoid deletion of default tuition payment plan if there are tuition installments dependent on them Add degree curricular plans on academic debt generation (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -233,7 +233,7 @@ error.TuitionPaymentPlan.customized.required.name=O nome do plano é obrigatório.
 error.TuitionPaymentPlan.default.payment.plan.must.be.for.registration=Apenas os planos de propinas para matrículas podem ser principais.
 error.TuitionPaymentPlan.default.payment.plan.tariffs.calculation.type.not.fixed.amount=Os planos de propinas principais só podem ter prestações de valor fixo.
 error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular e ano lectivo.
-error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas.
+error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se é principal e se existem outros planos com prestações calculadas a partir deste.
 error.TuitionPaymentPlan.installments.must.not.be.empty=O plano de propinas deve ter pelo menos uma prestação.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se já foram criadas dívidas associadas as prestações das propinas.
 error.TuitionPaymentPlan.choose.degree.curricular.plans=Deverá escolher pelo menos um plano curricular.
@@ -462,6 +462,7 @@ label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmD
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
 label.AcademicDebtGenerationRule.paymentCodePool=Pool Referências MB
+label.AcademicDebtGenerationRule.degreeCurricularPlans=Planos curriculares
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
 label.manageacademicdebtgenerationrule.createAcademicDebtGenerationRule=Criar regra para lançamento automático de dívidas
@@ -542,6 +543,8 @@ error.AcademicTaxDebtCreation.debtDate.required=Indique a data de lançamento da 
 error.AcademicTaxDebtCreation.academicTax.required=Indique a taxa académica.
 error.AcademicTaxDebtCreation.improvementEvaluation.required=A inscrição de melhoria é obrigatória.
 error.AcademicTaxDebtCreation.event.is.charged=A dívida já está criada.
+error.AcademicTaxDebtCreation.academicTax.not.for.first.year=A taxa académica não é aplicada no primeiro ano lectivo da matrícula.
+error.AcademicTaxDebtCreation.academicTax.not.for.subsequent.years=A taxa académica não é aplicada nos anos lectivos subsequentes a primeira matrícula. 
 label.AcademicTreasurSettings.academicalActBlocking.selected=Produto bloqueia actos académicos
 
 label.AcademicServiceRequestDebtCreationBean.create.academicservicerequest.debts=Lançar dívida para serviço académico
