Associate academic debt rule with degree curricular plans

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -449,6 +449,7 @@ label.AcademicTax.appliedOnRegistrationFirstYear=Aplicada 1º ano 1º vez (matrícu
 label.AcademicTax.appliedOnRegistrationSubsequentYears=Aplicado a partir da 2º inscrição (matrícula)
 label.AcademicTax.improvement.debit.entry.description=Taxa de Melhoria: {0} ({1})
 label.AcademicTax.appliedAutomatically=Aplicada automáticamente
+label.AcademicTax.debit.entries.created.success=A taxa académica foi lançada com sucesso.
 label.manageAcademicTax.readAcademicTax=Detalhes da Taxa Académica
 label.manageAcademicTax.readAcademicTax.confirmDelete=Deseja remover a taxa académica
 label.manageAcademicTax.updateAcademicTax=Actualizar a Taxa Académica
@@ -459,10 +460,14 @@ label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule=Lançamen
 label.manageacademicdebtgenerationrule.readlog=Ver Histórico
 label.manageacademicdebtgenerationrulelog.expandcolapse=Expandir / Contrair
 label.manageacademicdebtgenerationrule.searchAcademicDebtGenerationRule.confirmDelete=Deseja remover esta regra?
+label.manageacademicdebtgenerationrule.show.dcps=Ver Planos Curriculares
+label.manageacademicdebtgenerationrule.degreeCurricularPlans=Planos Curriculares 
 label.AcademicDebtGenerationRule.executionYear=Ano Lectivo
 label.AcademicDebtGenerationRule.academicDebtGenerationRuleEntries=Items de Dívida
 label.AcademicDebtGenerationRule.paymentCodePool=Pool Referências MB
 label.AcademicDebtGenerationRule.degreeCurricularPlans=Planos curriculares
+label.AcademicDebtGenerationRule.degreeCurricularPlanDataSource.is.empty=Não existem planos curriculares para seleccionar
+label.AcademicDebtGenerationRule.degreeType=Tipo de Curso
 label.manageacademicdebtgenerationrule..inactivate=Desactivar
 label.manageacademicdebtgenerationrule..activate=Activar
 label.manageacademicdebtgenerationrule.createAcademicDebtGenerationRule=Criar regra para lançamento automático de dívidas
@@ -474,6 +479,8 @@ label.AcademicDebtGenerationRule.associated.products=Produtos associados
 label.AcademicDebtGenerationRuleEntry.product=Item de dívida
 label.AcademicDebtGenerationRuleEntry.createDebt=Criar dívida
 label.AcademicDebtGenerationRule.rules=Regras
+label.AcademicDebtGenerationRuleEntry.degreeType=Tipo de Curso
+label.AcademicDebtGenerationRuleEntry.degreeCurricularPlan=Plano Curricular
 label.log.date=Data de Criação: 
 
 error.AcademicDebtGenerationRule.executionYear.required=O ano lectivo é obrigatório.
@@ -482,6 +489,8 @@ error.AcademicDebtGenerationRule.aggregateAllOrNothing.requires.aggregateOnDebit
 error.AcademicDebtGenerationRule.createPaymentReferenceCode.requires.closeDebitNote=A atribuição da Ref. MB requer o fecho da nota de dívida.
 error.AcademicDebtGenerationRule.entries.required=Adicione pelo menos um produto.
 error.AcademicDebtGenerationRule.delete.impossible=Não é possível remover a regra.
+error.AcademicDebtGenerationRule.degreeCurricularPlan.not.active=O plano curricular não está activo: {0}
+error.AcademicDebtGenerationRule.degreeCurricularPlans.required=A regra deverá estar definida pelo menos para um plano curricular.
 label.AcademicDebtGenerationRule.delete.success=A regra foi removida com sucesso.
 
 label.AcademicDebtGenerationRule.active.message=[ACTIVO]
