Update school bootstrap data Filter execution years that student has normal enrolments

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -595,3 +595,6 @@ label.manageRegistrationProtocolPayGratuities.updateRegistrationProtocol=Actuali
 label.AcademicDebtGenerationRegistration.run.rules=Executar lançamento automático de dívidas
 label.AcademicDebtGenerationRegistration.choose.registration=Executar lançamento automático de dívidas
 label.AcademicDebtGenerationRegistration.registration=Matrícula
+
+label.TuitionServices.removeDebitEntryForStandaloneEnrolment.reason=Remoção da inscrição
+label.TuitionServices.removeDebitEntryForExtracurricularEnrolment.reason=Remoção da inscrição
