Tuition Tariff based on ECTS and course function cost

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -598,3 +598,14 @@ label.AcademicDebtGenerationRegistration.registration=Matrícula
 
 label.TuitionServices.removeDebitEntryForStandaloneEnrolment.reason=Remoção da inscrição
 label.TuitionServices.removeDebitEntryForExtracurricularEnrolment.reason=Remoção da inscrição
+
+# SearchScreen searchCourseFunctionCost
+label.title.manageCourseFunctionCost=Custo de Funcionamento de Disciplinas
+label.manageCourseFunctionCost.searchCourseFunctionCost=Custo de Funcionamento de Disciplinas
+label.manageCourseFunctionCost.searchCourseFunctionCost.confirmDelete=Deseja remover o custo de funcionamento?
+label.CourseFunctionCost.competenceCourses=Disciplinas
+label.CourseFunctionCost.functionCost=Custo de Funcionamento
+label.CourseFunctionCost.executionYear=Ano Lectivo
+label.CourseFunctionCost.degreeCurricularPlan=Plano Curricular
+label.manageCourseFunctionCost.createCourseFunctionCost=Adicionar Custo de Funcionamento
+
