Tuition on Standalone and extracurricular for course function cost

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -172,6 +172,9 @@ label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
 label.AcademicTreasuryEventKeys.DEGREE=Curso
 label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
 label.AcademicTreasuryEventKeys.ENROLMENT=Disciplina
+label.AcademicTreasuryEventKeys.FACTOR=Factor
+label.AcademicTreasuryEventKeys.TOTAL_ECTS_OR_UNITS=Total de Unidades ou ECTS por ano lectivo
+label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da disciplina
 
 error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
@@ -252,6 +255,7 @@ error.TuitionPaymentPlan.ectsCalculationType.required=A forma de cálculo do mont
 error.TuitionPaymentPlan.factor.required=O factor é obrigatório.
 error.TuitionPaymentPlan.totalEctsOrUnits.required=O total de ECTS ou disciplinas por ano é obrigatório.
 error.TuitionPaymentPlan.installment.already.with.product=O produto associado a prestação já está inserido. 
+error.TuitionPaymentPlan.specify.at.least.one.condition=Especifique pelo menos uma condição.
 
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
@@ -260,6 +264,7 @@ TuitionCalculationType.UNITS=Disciplinas
 
 EctsCalculationType.FIXED_AMOUNT=Montante Fixo
 EctsCalculationType.DEFAULT_PAYMENT_PLAN_INDEXED=Indexado ao plano principal
+EctsCalculationType.DEFAULT_PAYMENT_PLAN_COURSE_FUNCTION_COST_INDEXED=Indexado ao plano principal e custo de funcionamento da disciplina
 
 label.TuitionInstallmentTariff.beginDate=Início
 label.TuitionInstallmentTariff.dueDate=Data de Vencimento
@@ -297,6 +302,13 @@ label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Pr
 label.TuitionInstallmentTariff.debitEntry.name.standalone={0}º Prestação da Propina em Unidades Curriculares Isoladas ({1} - {2})
 label.TuitionInstallmentTariff.debitEntry.name.extracurricular={0}º Prestação da Propina em Unidades Extracurriculares ({1} - {2})
 
+label.TuitionInstallmentTariff.description=Prestação
+label.TuitionInstallmentTariff.vat=IVA (%)
+label.TuitionInstallmentTariff.noDueDate=Sem data de vencimento
+label.TuitionInstallmentTariff.bestOfFixedDateAndDaysAfterCreation=&nbsp;ou {0} dias após a criação do item de dívida depois da data indicada
+
+label.TupleDataSourceBean.select.description=Seleccione uma opção
+
 error.TuitionInstallmentTariff.tuitionPaymentPlan.required=O plano de propinas é obrigatório.
 error.TuitionInstallmentTariff.installmentOrder.must.be.positive=A número da prestação tem de ser positiva.
 error.TuitionInstallmentTariff.tariff.installment.order.already.exists=Já existe uma prestação com o mesmo número.
@@ -309,12 +321,7 @@ error.TuitionInstallmentTariff.totalEctsOrUnits.required=O total ({0} por ano le
 error.TuitionInstallmentTariff.factor.must.be.positive=O factor tem de ser positivo.
 error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} por ano lectivo) tem de ser positivo.
 error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propinas principal não está definido.
-label.TuitionInstallmentTariff.description=Prestação
-label.TuitionInstallmentTariff.vat=IVA (%)
-label.TuitionInstallmentTariff.noDueDate=Sem data de vencimento
-label.TuitionInstallmentTariff.bestOfFixedDateAndDaysAfterCreation=&nbsp;ou {0} dias após a criação do item de dívida depois da data indicada
-
-label.TupleDataSourceBean.select.description=Seleccione uma opção
+error.TuitionInstallmentTariff.defaultPaymentPlanCourseFunctionCostIndexed.not.supported.for.registrationTuition=O cálculo por custo de funcionamento da disciplina não é suportado em propinas de matrícula.
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
@@ -393,6 +400,7 @@ label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Visualizar
 label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan=Visualizar Planos de Propinas
 label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan.choose=Visualizar
 label.manageTuitionPaymentPlan.createChooseDegreeCurricularPlans=Planos Curriculares
+label.manageTuitionPaymentPlan.createDefineStudentConditions=Condições do Aluno
 label.manageTuitionPaymentPlan.createTuitionPaymentPlan=Criar Planos de Propinas
 label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
 label.manageTuitionPaymentPlan.installments=Prestações
@@ -608,4 +616,4 @@ label.CourseFunctionCost.functionCost=Custo de Funcionamento
 label.CourseFunctionCost.executionYear=Ano Lectivo
 label.CourseFunctionCost.degreeCurricularPlan=Plano Curricular
 label.manageCourseFunctionCost.createCourseFunctionCost=Adicionar Custo de Funcionamento
-
+label.CourseFunctionCost.delete.success=O custo de funcionamento foi removido com sucesso.
