Fix tuition by cost function cost formula

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -175,6 +175,7 @@ label.AcademicTreasuryEventKeys.ENROLMENT=Disciplina
 label.AcademicTreasuryEventKeys.FACTOR=Factor
 label.AcademicTreasuryEventKeys.TOTAL_ECTS_OR_UNITS=Total de Unidades ou ECTS por ano lectivo
 label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da disciplina
+label.AcademicTreasuryEventKeys.DEFAULT_TUITION_TOTAL_AMOUNT=Total da propina principal
 
 error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
