Possibility of tuition debt generation with last registration state (for PHD students)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -487,6 +487,7 @@ label.AcademicDebtGenerationRule.createPaymentReferenceCode=Atribuir Ref. MB
 label.AcademicDebtGenerationRule.associated.products=Produtos associados
 label.AcademicDebtGenerationRuleEntry.product=Item de dívida
 label.AcademicDebtGenerationRuleEntry.createDebt=Criar dívida
+label.AcademicDebtGenerationRuleEntry.toCreateAfterLastRegistrationStateDate=Criar após último estado activo da matrícula (propinas)
 label.AcademicDebtGenerationRule.rules=Regras
 label.AcademicDebtGenerationRuleEntry.degreeType=Tipo de Curso
 label.AcademicDebtGenerationRuleEntry.degreeCurricularPlan=Plano Curricular
