Hide AcademicTreasurySettings misnamed relations On product deletion check the existence of AcademicTax Manage AcademicActBlockingSuspensions with DebtAccount (controller) Fix bug on listing suspensions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -529,6 +529,8 @@ label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension=Deta
 label.manageAcademicActBlockingSuspension.readAcademicActBlockingSuspension.confirmDelete=Deseja remover a suspensão?
 label.manageAcademicActBlockingSuspension.updateAcademicActBlockingSuspension=Actualizar suspensão de bloqueios de actos académicos
 
+error.AcademicActBlockingSuspension.endDate.must.be.after.or.equal.beginDate=A data de fim tem de ser igual ou posterior a data de inicio.
+
 error.AcademicTax.must.be.applied.on.some.registration.enrolment.year=A taxa deverá ser aplicada num ano curricular da matrícula. Indique se é aplicada a alunos inscritos 1º ano 1º vez na matrícula ou a partir do 2º ano da matrícula.
 
 label.title.manageFinantialEntityAdministrativeOffice=Gerir Entidades Financeiras e Secretarias Académicas
@@ -619,3 +621,6 @@ label.CourseFunctionCost.executionYear=Ano Lectivo
 label.CourseFunctionCost.degreeCurricularPlan=Plano Curricular
 label.manageCourseFunctionCost.createCourseFunctionCost=Adicionar Custo de Funcionamento
 label.CourseFunctionCost.delete.success=O custo de funcionamento foi removido com sucesso.
+
+# Product
+error.Product.cannot.delete.due.to.academic.tax=O produto está associado a uma taxa académica
