Improve debit entry properties map

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -170,12 +170,14 @@ label.AcademicTreasuryEventKeys.ENROLLED_COURSES=Nº de inscrições
 label.AcademicTreasuryEventKeys.AMOUNT_PER_COURSE=Montante por inscrição
 label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
 label.AcademicTreasuryEventKeys.DEGREE=Curso
+label.AcademicTreasuryEventKeys.DEGREE_CODE=Código do Curso
 label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
 label.AcademicTreasuryEventKeys.ENROLMENT=Disciplina
 label.AcademicTreasuryEventKeys.FACTOR=Factor
 label.AcademicTreasuryEventKeys.TOTAL_ECTS_OR_UNITS=Total de Unidades ou ECTS por ano lectivo
 label.AcademicTreasuryEventKeys.COURSE_FUNCTION_COST=Custo de funcionamento da disciplina
 label.AcademicTreasuryEventKeys.DEFAULT_TUITION_TOTAL_AMOUNT=Total da propina principal
+label.AcademicTreasuryEventKeys.USED_DATE=Data usada para lançamento da dívida
 
 error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
@@ -323,6 +325,7 @@ error.TuitionInstallmentTariff.factor.must.be.positive=O factor tem de ser posit
 error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} por ano lectivo) tem de ser positivo.
 error.TuitionInstallmentTariff.default.payment.plan.not.defined=O plano de propinas principal não está definido.
 error.TuitionInstallmentTariff.defaultPaymentPlanCourseFunctionCostIndexed.not.supported.for.registrationTuition=O cálculo por custo de funcionamento da disciplina não é suportado em propinas de matrícula.
+error.TuitionInstallmentTariff.courseFunctionCourse.not.defined=O custo de funcionamento para a disciplina não está definido.
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
