Toogle with setting on running academic debt generation rules on enrolment

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -442,6 +442,7 @@ label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração T
 label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
 label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
 label.AcademicTreasurySettings.closeServiceRequestEmolumentsWithDebitNote=Fechar emolumentos de serviços académicos em nota de dívida
+label.AcademicTreasurySettings.runAcademicDebtGenerationRuleOnNormalEnrolment=Correr regras para geração de dívida após inscrição
 label.AcademicTreasurySettings.improvementAcademicTax=Taxa de Melhoria
 label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
 label.AcademicTreasurySettings.academicalActBlockingProducts=Produtos bloqueantes de actos académicos em caso de dívida
