Add rule to automatic debt generation that uniforms academic tax due date to maximum due date (in most cases from tuition installment) Lock pending registration for debt creation relation to ensure that only one transaction read or write on that relation (to avoid infinite restarts)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -487,6 +487,7 @@ label.manageacademicdebtgenerationrule.createAcademicDebtGenerationRule=Criar re
 label.AcademicDebtGenerationRule.aggregateOnDebitNote=Agregar em nota de dívida
 label.AcademicDebtGenerationRule.aggregateAllOrNothing=Apenas agregar todos os produtos
 label.AcademicDebtGenerationRule.closeDebitNote=Fechar nota de dívida
+label.AcademicDebtGenerationRule.alignAllAcademicTaxesDebitToMaxDueDate=Uniformizar datas de vencimento de taxas para a data superior
 label.AcademicDebtGenerationRule.createPaymentReferenceCode=Atribuir Ref. MB
 label.AcademicDebtGenerationRule.associated.products=Produtos associados
 label.AcademicDebtGenerationRuleEntry.product=Item de dívida
