Anull and settle on improvement enrolment removal

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -629,3 +629,6 @@ label.CourseFunctionCost.delete.success=O custo de funcionamento foi removido co
 
 # Product
 error.Product.cannot.delete.due.to.academic.tax=O produto está associado a uma taxa académica
+
+# AcademicTaxServices
+label.AcademicTaxServices.removeDebitEntryForImprovement.reason=Remoção da inscrição de melhoria
