Remove or credit debit entry on cancel or reject academic service request

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -632,3 +632,6 @@ error.Product.cannot.delete.due.to.academic.tax=O produto está associado a uma t
 
 # AcademicTaxServices
 label.AcademicTaxServices.removeDebitEntryForImprovement.reason=Remoção da inscrição de melhoria
+
+# EmolumentServices
+label.EmolumentServices.removeDebitEntryForAcademicService.reason=Anulação ou rejeição de serviço académico
