Allow forcing creation of tuition or academic tax even if the student is not enrolled or is does not pay tuitions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -427,6 +427,7 @@ label.TuitionDebtCreationBean.tuitionPaymentPlan=Plano de Propinas
 label.TuitionDebtCreationBean.infer.select.registration.and.executionYear=Seleccione a matrícula e o ano lectivo.
 label.TuitionDebtCreationBean.infer.select.enrolment=Seleccione a disciplina.
 label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Verifique os planos criados para o plano curricular do aluno.
+label.TuitionDebtCreationBean.forceCreation=Forçar lançamento
 
 label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívidas Académicas
 label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dívida de Propina
