Debts Excel Report

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -636,3 +636,70 @@ label.AcademicTaxServices.removeDebitEntryForImprovement.reason=Remoção da inscr
 
 # EmolumentServices
 label.EmolumentServices.removeDebitEntryForAcademicService.reason=Anulação ou rejeição de serviço académico
+
+
+# DebtReportEntryBean
+label.DebtReportEntryBean.debitNoteEntry = Item de dívida
+label.DebtReportEntryBean.creditNoteEntry = Item de acerto
+
+label.DebtReportEntryBean.header.identification = Identificador
+label.DebtReportEntryBean.header.entryType = Tipo
+label.DebtReportEntryBean.header.versioningCreator = Responsável
+label.DebtReportEntryBean.header.creationDate = Data de criação
+label.DebtReportEntryBean.header.entryDate = Data de lançamento
+label.DebtReportEntryBean.header.dueDate = Data de vencimento
+label.DebtReportEntryBean.header.name = Nome
+label.DebtReportEntryBean.header.identificationType = Tipo doc. identificação
+label.DebtReportEntryBean.header.identificationNumber = Doc. identificação
+label.DebtReportEntryBean.header.vatNumber = NIF
+label.DebtReportEntryBean.header.email = Email
+label.DebtReportEntryBean.header.address = Morada
+label.DebtReportEntryBean.header.studentNumber = Nº aluno
+label.DebtReportEntryBean.header.degreeCode = Cód. Curso
+label.DebtReportEntryBean.header.degreeName = Curso
+label.DebtReportEntryBean.header.executionYear = Ano lectivo
+label.DebtReportEntryBean.header.executionSemester = Semestre
+label.DebtReportEntryBean.header.productCode = Cód. produto
+label.DebtReportEntryBean.header.invoiceEntryDescription = Descrição
+label.DebtReportEntryBean.header.documentNumber = Documento
+label.DebtReportEntryBean.header.baseAmount = Montante base
+label.DebtReportEntryBean.header.creditedAmount= Montante acertado
+label.DebtReportEntryBean.header.amountToPay = Montante a pagamento
+label.DebtReportEntryBean.header.openAmountToPay = Montante por pagar
+label.DebtReportEntryBean.header.agreement = Acordo
+label.DebtReportEntryBean.header.ingression = Ingresso
+label.DebtReportEntryBean.header.firstTimeStudent = 1º ano 1º vez
+label.DebtReportEntryBean.header.partialRegime = Regime parcial
+label.DebtReportEntryBean.header.statutes = Estatutos
+label.DebtReportEntryBean.header.tuitionPaymentPlan = Plano de pagamentos
+label.DebtReportEntryBean.header.tuitionPaymentPlanConditions = Condições do plano de pagamentos
+
+# DebtReportRequest
+
+
+label.DebtReportRequest.creationDate=Data de criação
+label.DebtReportRequest.requestor=Responsável
+label.DebtReportRequest.processing=Estado do pedido
+label.DebtReportRequest.pending.processing=Pendente de processamento
+label.DebtReportRequest.descriptionlabel.DebtReportRequest.beginDate=Data de inicio
+label.DebtReportRequest.beginDate=Data de inicio
+label.DebtReportRequest.endDate=Data de fim
+label.DebtReportRequest.description=Descrição
+
+error.DebtReportRequest.beginDate.required = Data de inicio obrigatória
+error.DebtReportRequest.endDate.required = Data de fim obrigatória
+error.DebtReportRequest.type=Tipo de relatório obrigatório
+
+# DebtReportRequestResultFile
+
+error.DebtReportRequestResultFile.debtReportRequest.required=O pedido é obrigatório
+
+label.DebtReportRequestResultFile.INVOICE_ENTRIES.filename=Relatorio_Dividas_{0}.xlsx
+label.DebtReportRequestResultFile.SETTLEMENT_ENTRIES.filename=Relatorio_Pagamentos_{0}.xlsx
+
+# manageDebtReportRequests
+
+label.title.manageDebtReportRequests=Relatório de Dívidas e Pagamentos
+label.manageDebtReportRequests.searchDebtReportRequest=Relatório de Dívidas e Pagamentos
+label.manageDebtReportRequests.createDebtReportRequest=Criar Pedido para Relatório de Dívidas e Pagamentos
+label.manageDebtReportRequests.cancelRequest=Cancelar
