Force debt creation in automatic debt generation

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -497,6 +497,9 @@ label.AcademicDebtGenerationRuleEntry.toCreateAfterLastRegistrationStateDate=Cri
 label.AcademicDebtGenerationRule.rules=Regras
 label.AcademicDebtGenerationRuleEntry.degreeType=Tipo de Curso
 label.AcademicDebtGenerationRuleEntry.degreeCurricularPlan=Plano Curricular
+label.AcademicDebtGenerationRuleEntry.forceCreation=Forçar criação
+label.AcademicDebtGenerationRuleEntry.limitToRegisteredOnExecutionYear=Limitar a matrículas 1º Ano 1º Vez
+
 label.log.date=Data de Criação: 
 
 error.AcademicDebtGenerationRule.executionYear.required=O ano lectivo é obrigatório.
